# apifailover

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
apifailover/: __init__.py  engine.py
examples/: prices.py
tests/: test_engine.py
