[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apifailover"
version = "0.1.0"
description = "Domain-neutral multi-API failover engine: try providers in order, fall back per-call or per-item, with provenance tagging and a circuit breaker. Zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ivan Fodjo" }]
keywords = [
    "failover",
    "fallback",
    "resilience",
    "circuit-breaker",
    "api",
    "retry",
    "fault-tolerance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Kaiser9005/apifailover"
Repository = "https://github.com/Kaiser9005/apifailover"
Issues = "https://github.com/Kaiser9005/apifailover/issues"

[tool.hatch.build.targets.wheel]
packages = ["apifailover"]

[tool.pytest.ini_options]
testpaths = ["tests"]
